<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="B_1_1_PRG_Master_Station_1" Id="{74fda7da-e1c3-493f-8c86-5902a8ab2668}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM B_1_1_PRG_Master_Station_1

VAR
	eState								: E_Station1_State;
	tonErrorReset						: TON;
	tonStationStopped					: TON;
	ctuErrorCounter						: CTU;
	bPersistentError					: bool;
/////////////////////////////////////////////////////////////////////////////////////I O/////////////////////////////////////////////////////////////////////////////////////	
	bStopped							: BOOL;
	bError								: BOOL;
	bReady								: BOOL;
	bDone								: BOOL;

	
END_VAR

VAR_INPUT	
	
	CMD									:ST_StationCMD;	
	
END_VAR

VAR_OUTPUT	
	
	STATUS								:ST_StationStatus;	
	
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[B_1_2_PRG_Fault_Station_1( aAlarms := stAlarms );
a_ACT_Ctrl_Station_1();
b_ACT_IO();
]]></ST>
    </Implementation>
    <Action Name="a_ACT_Ctrl_Station_1" Id="{ce5dd8ea-9899-4a9f-bde8-defccc1c38a2}">
      <Implementation>
        <ST><![CDATA[/////////////////////////////////////////////////////////////////////////////////////UTILITIES/////////////////////////////////////////////////////////////////////////////////////
tonErrorReset( IN := (eState = E_Station1_State.RESET_ERROR), PT := T#500MS);
tonStationStopped( IN := bStopped, PT := T#1S);

ctuErrorCounter( CU := eState = E_Station1_State.RESET_ERROR, RESET := ((ctuErrorCounter.CV = 5) AND eState = E_Station1_State.PERSISTENT_ERROR), PV := 5, Q => bPersistentError);

/////////////////////////////////////////////////////////////////////////////////////CONDITIONS/////////////////////////////////////////////////////////////////////////////////////

IF (CMD.bAbort OR bError) AND ( eState			= E_Station1_State.HOMING OR
								eState			= E_Station1_State.READY OR
								eState			= E_Station1_State.MOVEMENT_A OR
								eState			= E_Station1_State.MOVEMENT_B OR
								eState			= E_Station1_State.MOVEMENT_C OR
								eState			= E_Station1_State.READY OR
								eState			= E_Station1_State.DONE) THEN
								
	eState						:= E_Station1_State.STOPPING;
	
END_IF



CASE eState OF
	
	E_Station1_State.ABORTED:
								IF CMD.bEnable AND NOT bError THEN
									eState						:= E_Station1_State.HOMING;
								ELSIF bError THEN
									eState						:= E_Station1_State.ERROR;
								END_IF
	
	E_Station1_State.HOMING:
								IF bReady THEN
									eState						:= E_Station1_State.READY;
								END_IF
	E_Station1_State.READY:
								IF CMD.bExecute AND stStation1.Mov1 THEN
									eState						:= E_Station1_State.MOVEMENT_A;
								ELSIF CMD.bExecute AND stStation1.Mov2 THEN
									eState						:= E_Station1_State.MOVEMENT_B;
								ELSIF CMD.bExecute AND stStation1.Mov3 THEN
									eState						:= E_Station1_State.MOVEMENT_C;
								END_IF
	
	E_Station1_State.MOVEMENT_A:
								IF bDone AND stStation1.Mov1 THEN
									eState						:= E_Station1_State.DONE;
								END_IF
	
	E_Station1_State.MOVEMENT_B:
								IF bDone AND stStation1.Mov2 THEN
									eState						:= E_Station1_State.DONE;
								END_IF
	E_Station1_State.MOVEMENT_C:
								IF bDone AND stStation1.Mov3 THEN
									eState						:= E_Station1_State.DONE;
								END_IF
	E_Station1_State.DONE:
								IF  CMD.bReady THEN
									eState						:= E_Station1_State.READY;
								END_IF	
/////////////////////////////////////////////////////////////////////////////////////RESET CMD/////////////////////////////////////////////////////////////////////////////////////			
	
	E_Station1_State.STOPPING: 
								IF tonStationStopped.Q THEN
									IF bError THEN
										eState						:= E_Station1_State.ERROR;
									ELSE eState						:= E_Station1_State.ABORTED;
									END_IF

								END_IF
	
	E_Station1_State.ERROR:
								IF NOT bError THEN
									eState						:= E_Station1_State.ABORTED;
								ELSE eState						:= E_Station1_State.RESET_ERROR;
								END_IF
	
	E_Station1_State.RESET_ERROR:
								IF tonErrorReset.Q AND NOT bPersistentError THEN
									eState						:= E_Station1_State.ERROR;
								ELSIF bPersistentError THEN
									eState						:= E_Station1_State.PERSISTENT_ERROR;
								END_IF
	
	E_Station1_State.PERSISTENT_ERROR:
								IF CMD.bReset THEN
									eState						:= E_Station1_State.ERROR;
								END_IF
								
								

ELSE eState := E_Station1_State.ABORTED;
	
END_CASE
/////////////////////////////////////////////////////////////////////////////////////STATUS/////////////////////////////////////////////////////////////////////////////////////

Status.bBusy				:= 	eState			= E_Station1_State.HOMING OR
								eState			= E_Station1_State.MOVEMENT_A OR
								eState			= E_Station1_State.MOVEMENT_B OR
								eState			= E_Station1_State.MOVEMENT_C OR
								eState			= E_Station1_State.STOPPING;
								
Status.bDone				:=	eState			= E_Station1_State.DONE;
											
Status.bError				:= 	eState			= (E_Station1_State.ERROR OR  E_Station1_State.RESET_ERROR OR E_Station1_State.PERSISTENT_ERROR);

Status.bReady				:= 	eState			= E_Station1_State.READY;

Status.bStopped				:= 	eState			= E_Station1_State.ABORTED OR
								eState			= E_Station1_State.READY OR
								eState			= E_Station1_State.ERROR OR
								eState			= E_Station1_State.RESET_ERROR;]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_ACT_IO" Id="{0f51cbd8-7d44-46ba-8ff2-5b85b0a3ce4b}">
      <Implementation>
        <ST><![CDATA[//bStopped								:=;
//bError								:=;
//bReady								:=;
//bDone]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="B_1_1_PRG_Master_Station_1">
      <LineId Id="87" Count="2" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="B_1_1_PRG_Master_Station_1.a_ACT_Ctrl_Station_1">
      <LineId Id="121" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="139" Count="1" />
      <LineId Id="144" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="3" Count="4" />
      <LineId Id="134" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="4" />
      <LineId Id="19" Count="7" />
      <LineId Id="29" Count="4" />
      <LineId Id="36" Count="4" />
      <LineId Id="43" Count="3" />
      <LineId Id="49" Count="0" />
      <LineId Id="152" Count="1" />
      <LineId Id="156" Count="1" />
      <LineId Id="163" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="50" Count="9" />
      <LineId Id="114" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="111" Count="1" />
      <LineId Id="116" Count="2" />
      <LineId Id="113" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="61" Count="2" />
      <LineId Id="1" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="76" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="92" Count="3" />
    </LineIds>
    <LineIds Name="B_1_1_PRG_Master_Station_1.b_ACT_IO">
      <LineId Id="1" Count="3" />
    </LineIds>
  </POU>
</TcPlcObject>